--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "20-build-a-better-portfolio",
+  "name": "kaleidofolio",
   "version": "1.0.0",
-  "description": "# Description",
+  "description": "# My branded portfolio",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
