--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eject": "react-scripts eject"
   },
   "keywords": [],
-  "author": "Your Name",
+  "author": "SamGreenwood84",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.3",
