gh-pages instll

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "kaleidofolio",
   "version": "1.0.0",
   "description": "My branded portfolio",
+  "homepage": "https://github.com/SamGreenwood84/kaleidofolio.git",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -14,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
